# custom_8085_system

./: .gitignore  8085_LIMITATIONS.md  ALL_OF_THE_ABOVE_COMPLETE.md  BUILD_STATUS.txt  GETTING_STARTED.md  INTEGRATION_COMPLETE.md  README.md  bios_gui.cpp  cpu8085.h
8085_bios/: 8085_bios_system  BUILD_SUCCESS.md  CMakeLists.txt  Makefile  OS_ROADMAP.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  TEST_GUIDE.txt  bios_gui.moc  cpu8085.cpp  test_minimal.asm
8085_bios/src/: bios.asm  scheduler.asm
src/: os_multitask.asm  os_shell.asm  os_v03.asm
tools/: assemble.py  assemble.sh
